Revision history for Text-Hyphen

{{$NEXT}}

0.12 2015-10-05T22:00:35Z
		- Conversion to Minilla

0.11    Mon Dec  8 03:14:38 MSK 2008
        Module::Install requires including parts of it into dist.

0.1     Sat Dec  6 04:01:51 MSK 2008
        First version, released on an unsuspecting world. Does
        hyphenation for English. Is much faster than all analogs on
        CPAN.
